# chaoxing

./: .gitignore  Dockerfile  README.md  app.py  best.py  config.ini  config_template.ini  docker-compose.yml  dockerfile  load_config.py  main.py  pyproject.toml  requirements.txt  small_tools.py  test.py  warning.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: -------.md  ----.md  Feature Request----.md  bug----.md
.github/workflows/: main.yml  run.yml
13554337909/203477796/: course_info.json  finished_list.json  job_list.json  mp4_log.json
api/: README.md  __init__.py  answer.py  answer_check.py  base.py  captcha.py  chaoxing.py  cipher.py  config.py  cookies.py  cxsecret_font.py  decode.py  exceptions.py  font_decoder.py  http.py  live.py  live_process.py  logger.py  notification.py  process.py
bk/: check_file.py  get_user.py
config/: SHOW.md  general.json
old_file/: best.py  check_file.py  j_updates.py  requirements.txt
resource/: BookID.txt  README.md  font_map_table.json
saves/: user_info.json
src/config/: config.py
src/course/: doWork.py  foreWork.py
src/path/: pathCheck.py
src/rprint/: print.py
src/show/: mdshow.py
src/user/: getUser.py
utils/: functions.py
